<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding"
    android:paddingTop="@dimen/padding"
    android:paddingRight="@dimen/padding"
    android:paddingBottom="@dimen/padding"
    tools:context=".EditeurTodo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/ok"
            android:onClick="doOK"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:text="@string/libTextCancel"
            android:onClick="doCancel"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todo"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/et_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/todo_hint"
                    android:lines="5"
                    android:maxLines="5" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_day"
                android:textSize="@dimen/text_size" />

            <DatePicker
                android:id="@+id/dp_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/tv_linkwith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_correspondant_text"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/et_linkwith"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/link_name" />

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/comment"
                android:lines="10"
                android:maxLines="10" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>